--- a/templates/check_friend.html
+++ b/templates/check_friend.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>파일 다운로드</title>
+		<title>유저 체크</title>
 	</head>
 	<body>
 		<center>
@@ -67,7 +67,7 @@
 	<body>
 		<br><br><br><br>
 		<center>
-			<form action = "/check" method = "POST" enctype = "multipart/form-data">
+			<form action = "/check_friend" method = "POST" enctype = "multipart/form-data">
 				<input type = "text" name = "code" style="background-color: white;" /><br><br><br><br>
 				<div id = "sub" >
 					<input type = "submit" value="체크"/>
