--- a/templates/check_me.html
+++ b/templates/check_me.html
@@ -1,17 +1,18 @@
 <html>
-    <head>
-        <meta charset='utf-8'>
-        <title>카카오</title>
-    </head>
-    <center>
-        <a href="/">
-            <div style="color: rgb(175, 184, 178); font-size: 5em; font-weight: bold;">
-            Dogyu's Server
-            </div>
-        </a>
-        <br><br>
-    </center>
-    <style>
+	<head>
+		<title>유저 체크</title>
+	</head>
+	<body>
+		<center>
+			<a href="/">
+				<div style="color: rgb(175, 184, 178); font-size: 5em; font-weight: bold;">
+				Dogyu's Server
+				</div>
+			</a>
+			<br><br>
+		</center>
+	</body>
+	<style>
 		a{
 			text-decoration-line: none;
 		}
@@ -25,7 +26,7 @@
 			content:'';
 			display:inline-block;
 		}
-		button{
+		input{
 			background:#00000000;
 			color:rgb(175, 184, 178);
 			border:none;
@@ -37,11 +38,11 @@
 			transition:800ms ease all;
 			outline:none;
 		}
-		button:hover{
+		#sub:hover{
 			background:rgba(5, 5, 5, 0.479);
 		}
-		button:before,
-		button:after{
+		#sub:before,
+		#sub:after{
 			content:'';
 			position:absolute;
 			top:0;
@@ -51,25 +52,30 @@
 			background: #deff24;
 			transition:400ms ease all;
 		}
-		button:after{
+		#sub:after{
 			right:inherit;
 			top:inherit;
 			left:0;
 			bottom:0;
 		}
-		button:hover:before,
-		button:hover:after{
+		#sub:hover:before,
+		#sub:hover:after{
 			width:100%;
 			transition:800ms ease all;
 		}
 	</style>
-    <body>
-        <center><br><br>
-			<a href="/kakao_me
-            "><button>kakao to_me app</button>
-            </a><br><br><br>
-			<a href="/kakao_friends
-            "><button>kakao to_friends app</button>
-            </a><br><br><br>
-    </body>
+	<body>
+		<br><br><br><br>
+		<center>
+			<form action = "/check_me" method = "POST" enctype = "multipart/form-data">
+				<input type = "text" name = "code" style="background-color: white;" /><br><br><br><br>
+				<div id = "sub" >
+					<input type = "submit" value="체크"/>
+				</div>
+			</form>
+
+			{{user}}
+		</center>
+	</body>
 </html>
+ 
