--- a/templates/kakao_friends.html
+++ b/templates/kakao_friends.html
@@ -65,11 +65,15 @@
 	</style>
     <body>
         <center><br><br>
-			<a href="/kakao_me
-            "><button>kakao to_me app</button>
+			<a href="https://kauth.kakao.com/oauth/authorize?client_id=91d3b37e4651a9c3ab0216abfe877a50&redirect_uri=https://localhost:8000/kakao/oauth&response_type=code&scope=talk_message,friends
+            " target='_blank'><button>kakao to_friend login</button>
             </a><br><br><br>
-			<a href="/kakao_friends
-            "><button>kakao to_friends app</button>
+			<a href="/check_owner
+            "><button>owner check</button>
             </a><br><br><br>
+			<a href="/check_friend
+            "><button>friends check</button>
+            </a><br><br><br>
+        </center>
     </body>
 </html>
