--- a/templates/kakao_me.html
+++ b/templates/kakao_me.html
@@ -65,11 +65,12 @@
 	</style>
     <body>
         <center><br><br>
-			<a href="/kakao_me
-            "><button>kakao to_me app</button>
+            <a href="https://kauth.kakao.com/oauth/authorize?client_id=0a8a356679801891a01bdc324ec32d77&redirect_uri=https://localhost:8000/kakao/oauth&response_type=code
+            " target='_blank'><button>kakao to_me login</button>
             </a><br><br><br>
-			<a href="/kakao_friends
-            "><button>kakao to_friends app</button>
+			<a href="/check_me
+            "><button>kakao me check</button>
             </a><br><br><br>
+        </center>
     </body>
 </html>
