--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,7 +6,7 @@
 		<center>
 			<a href="/">
 				<div style="color: rgb(175, 184, 178); font-size: 5em; font-weight: bold;">
-				Dogyu's Server
+					Pibo's Server
 				</div>
 			</a>
 			<br><br>
